HISTORY

(git master)

  * [Enter new changes just after this line - do not remove this line]

  ++ New features:

  2017-07-03: Jakub Schmidtke
  * tcp: added support for sending TCP SACKs

  2017-06-20: Joel Cunningham
  * netconn/netdb: added core locking support to netconn_gethostbyname (task #14523)

  2017-04-25: Simon Goldschmidt
  * dhcp: added two hooks for adding and parsing user defined DHCP options

  2017-04-25: Joel Cunningham
  * sockets: added CMSG and IP_PKTINFO for use with recvmsg (task #14247)

  2017-04-20: Joel Cunningham
  * tcp: added Appropriate Byte Counting support (task #14128)

  2017-04-11: Simon Goldschmidt
  * netconn/sockets: remove fatal error handling, fix asynchronous error handling,
    ensure data before RST can be received

  2017-03-02: Joel Cunningham
  * netconn/sockets: vectorize netconn_write for TCP, treating a vectored I/O write
    atomically in regards to TCP segmentation (patch #8882)

  2017-03-02: Simon Goldschmidt
  * netconn: added nonblocking accept/recv to netconn API (task #14396)

  2017-02-28: Simon Goldschmidt
  * Added LWIP_SINGLE_NETIF for small targets with only one netif

  2017-02-17: Simon Goldschmidt
  * Improved DNS_LOCAL_HOSTLIST interface

  2017-02-10: David van Moolenbroek
  * Implement UDP and RAW multicast support for IPv6 (core API, not netconn/sockets)

  2017-02-10: Simon Goldschmidt
  * tcp_close does not fail on memory error (instead, FIN is sent from tcp_tmr)

  2017-02-04: David van Moolenbroek
    - IPv6 scopes support

  2017-01-20: Joel Cunningham
  * sockets: add interface name/index APIs (task #14314)
  
  2017-01-08: David van Moolenbroek
  * Extensions to RAW API (patch #9208)
    - Connected RAW PCBs
    - Add raw_sendto_if_src()
    - Support IP_HDRINCL socket option

  ++ Bugfixes:

  2017-05-09: Joel Cunningham
  * tcp: add zero-window probe timeout (bug #50837)

  2017-04-11: Simon Goldschmidt
  * sockets.c: task #14420 (Remove sys_sem_signal from inside SYS_ARCH_PROTECT